<resources>
    <string name="app_name">Slate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan">Plan</string>
    <string name="my_list">My List</string>
    <string name="preferences">Preferences</string>
    <string name="empty_list_warning">List is empty!</string>
    <string name="cancel">Cancel</string>
    <string name="add_item">Add Item</string>
    <string name="blank"/>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_optional">Quantity (optional)</string>
    <string name="unit_optional">Unit (optional)</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="change_dates">Changes dates ></string>
    <string name="formatted_selected_date">Planning through %s\n%s %d, %d</string>
    <string name="twenty_spaces"/>
    <string name="loading">Loading.................................</string>
    <string name="add_item_from_favorites">Add Item From Favorites</string>
    <string name="b">B</string>
    <string name="l">L</string>
    <string name="d">D</string>

</resources>
