<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".list.add.AddListItemActivity">

    <Button
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/cancel_button"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/add_item_button"
            app:layout_constraintTop_toBottomOf="@+id/add_to_fav_switch"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/add_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_item_button" android:textSize="18sp" app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"/>
    <TextView
            android:text="@string/add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_item_header" android:textSize="50sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/item_name_text"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/blank"
            android:ems="10"
            android:id="@+id/item_name_text"
            android:hint="@string/item" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintTop_toBottomOf="@+id/add_item_header" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/quantity_text"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:ems="10"
            android:id="@+id/quantity_text"
            android:hint="@string/quantity_optional" android:inputType="number"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/quantity_unit_text" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/item_name_text"
            app:layout_constraintBottom_toTopOf="@+id/add_to_fav_switch"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/unit_optional"
            android:ems="10"
            android:id="@+id/quantity_unit_text" app:layout_constraintStart_toEndOf="@+id/quantity_text"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/quantity_text"/>
    <Switch
            android:text="@string/add_to_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_to_fav_switch" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/quantity_text" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>